--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -64,6 +64,84 @@
 	background-color: var( --secundario );
 }
 
+.formulario {
+	background: white;
+	position: absolute;
+	left: 0;
+	right: 0;
+	width: 500px;
+	margin: 20px auto 0;
+	border-bottom: 6px solid var(--primario);
+	padding-bottom: 30px;
+}
+.formulario > span {
+	position: absolute;
+	right: 0;
+	font-size: 2em;
+	margin: 10px;
+	cursor: pointer;
+	-webkit-transition: all 0.2s ease-out;
+	-moz-transition:    all 0.2s ease-out;
+	-o-transition:      all 0.2s ease-out;
+	transition:         all 0.2s ease-out;
+}
+.formulario > span:hover {
+	opacity: 75%;
+	color: var( --primario );
+}
+.formulario > img {
+	margin: 0 auto;
+	width: 80%;
+	display: block;
+}
+.formulario > h2 {
+	margin-top: 20px;
+	text-align: center;
+}
+.formulario > p {
+	width: 100%;
+	text-align: center;
+	padding: 10px 8%;
+}
+.formulario > form {
+	width: 100%;
+}
+.formulario > form > div {
+	width: 92%;
+	margin: 10px auto 0;
+	display: flex;
+	flex-direction: column;
+}
+.formulario > form > div > label {
+	font-weight: 400;
+	font-size: 1.2em;
+	margin-bottom: 5px;
+}
+.formulario > form > div > input ,
+.formulario > form > div > textarea {
+	border: 1px solid #aaa;
+	padding: 10px;
+	font-size: 1em;
+}
+.formulario > form > div > input::placeholder ,
+.formulario > form > div > textarea::placeholder {
+	color: #aaa;
+	font-weight: 400;
+}
+.formulario > form > div > input {
+	height: 50px;
+}
+.formulario > form > div > textarea {
+	height: 80px;
+}
+.formulario > form > button {
+	text-transform: uppercase;
+	font-size: 1.2em;
+	font-weight: 300;
+	margin-top: 20px;
+	margin-left: 4%;
+}
+
 @media ( max-width: 800px ) {
 	.contenido h1 {
 		font-size: 3em;
