--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -64,6 +64,15 @@
 	background-color: var( --secundario );
 }
 
+.formulariofondo {
+	background-color: black;
+	opacity: 75%;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	cursor: pointer;
+}
 .formulario {
 	background: white;
 	position: absolute;
@@ -122,11 +131,16 @@
 	border: 1px solid #aaa;
 	padding: 10px;
 	font-size: 1em;
+	outline: none;
 }
 .formulario > form > div > input::placeholder ,
 .formulario > form > div > textarea::placeholder {
 	color: #aaa;
 	font-weight: 400;
+}
+.formulario > form > div > input:focus ,
+.formulario > form > div > textarea:focus {
+	border: 1px solid var( --primario );
 }
 .formulario > form > div > input {
 	height: 50px;
